Theming: fixed button transition and spacing issues

--- a/src/Presentation/SmartStore.Web/Administration/Content/_admin.scss
+++ b/src/Presentation/SmartStore.Web/Administration/Content/_admin.scss
@@ -242,6 +242,10 @@ body {
 
 		> * {
 			vertical-align: middle;
+            margin-right: 2px;
+            &:last-child {
+                margin-right: 0;
+            }
 		}
 
 		&.btn-toolbar {
