--- a/src/Presentation/SmartStore.Web/Administration/Content/_variables.scss
+++ b/src/Presentation/SmartStore.Web/Administration/Content/_variables.scss
@@ -144,7 +144,7 @@ $btn-focus-width:				0; //$input-btn-focus-width;
 $btn-box-shadow:				inset 0 0 0 rgba(#fff, 0.15), 0 0 0 rgba(#000, 0.075);
 $btn-focus-box-shadow:			$input-btn-focus-box-shadow;
 //$btn-active-box-shadow:         inset 0 2px 3px rgba(#000, .125);
-$btn-transition:				background-color .05s ease-in-out, border-color .05s ease-in-out, box-shadow .05s ease-in-out;
+$btn-transition:				background-color .05s ease-in-out, border-color .05s ease-in-out, box-shadow .12s ease-in-out;
 $btn-border-radius:				$input-border-radius; //.125rem;
 $btn-border-radius-lg:          $input-border-radius-lg; //.1875rem;
 $btn-border-radius-sm:          $input-border-radius-sm; //.125rem;
