--- a/src/Presentation/SmartStore.Web/Administration/Content/theme.scss
+++ b/src/Presentation/SmartStore.Web/Administration/Content/theme.scss
@@ -32,10 +32,10 @@
 		&:not(:active):not(.active):focus,
 		&:not(:active):not(.active).focus {
 			@if $color == "secondary" or $color == "light" {
-				box-shadow: 0 0 0 0.2em rgba($primary, .15);
+				box-shadow: 0 0 0 rgba(0,0,0, 0) inset, 0 0 0 0.2em rgba($primary, .15);
 			}
 			@else {
-				box-shadow: 0 0 0 0.2em rgba($value, .4);
+				box-shadow: 0 0 0 rgba(0,0,0, 0) inset, 0 0 0 0.2em rgba($value, .4);
 			}
 		}
 	}
